name:                raytracer
version:             0.0.1
synopsis:            A raytracer written in Haskell.            
license:             MIT
license-file:        LICENSE
author:              Chemicaloid
maintainer:          chemicaloid.dev@gmail.com
homepage:            https://github.com/chemicaloid/raytracer
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src/lib
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             spec.hs
  hs-source-dirs:      src/lib tests
  build-depends:       base >= 4.8 && <4.9, hspec
  default-language:    Haskell2010
